- make collection column-headings wrap - fix KTS-1181: permissions are obscured.
git-svn-id: https://kt-dms.svn.sourceforge.net/svnroot/kt-dms/trunk@5737 c91229c3-7414-0410-bfa2-8a42b809f60b

--- a/resources/css/kt-framing.css
+++ b/resources/css/kt-framing.css
@@ -568,7 +568,7 @@ a.main_nav_item {
 .kt_collection thead th {
     border-bottom: 1px solid #888;
     text-align: left;
-    white-space: nowrap !important;
+    white-space: normal !important;
 }
 
 .kt_collection th.sort_on.sort_asc {
